--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,4 +5,4 @@
 </li>
 <% end %>
 </ol>
-<div class="btn"><%= link_to "New list", "lists/new" %></div>
+<button type="button" class="btn btn-primary">New List<%= link_to "New list", "lists/new" %></button>
