--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -5,6 +5,7 @@
 <h2><%= bookmark.movie.title%></h2>
 <%= bookmark.movie.poster_url %>
 <p><%= bookmark.movie.overview %></p>
+<p><%= bookmark.comment %></p>
 <%= link_to "Remove movie", bookmark_path(bookmark),
     data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
 </li>
