--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -3,4 +3,5 @@
   <%= simple_form_for(@list) do |f| %>
     <%= f.input :name %>
     <%= f.submit %>
+    <%= f.input :photo, as: :file %>
   <% end %>
